style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box1;
  font-family: "poppins", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
}
html {
  scroll-behavior: smooth;
}
body {
  background: #080808;
  color: fff;
  overflow-x: hidden;
}
#header {
  width: 100%;
  height: 100vh;
  background-image: url(images/background.png);
  background-size: cover;
  background-position: center;
}
.container {
  padding: 10px 10%;
}
nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
}
.logo {
  width: 140px;
}
nav ul li {
  display: inline-block;
  list-style: none;
  margin: 10px 20px;
}
nav ul li a {
  color: white;
  text-decoration: none;
  font-size: 18px;
  position: relative;
}

nav ul li a::after {
  content: "";
  width: 0;
  height: 3px;
  background: #ff004f;
  position: absolute;
  left: 0;
  bottom: -6px;
  transition: 0.5s;
}
nav ul li a:hover::after {
  width: 100%;
}

.header-text {
  color: white;
  margin-top: 20%;
  font-size: 30px;
}
.header-text h1 {
  font-size: 60px;
  margin-top: 20px;
}
.header-text h1 span {
  color: #ff004f;
}

/*-------------------About Section --------------------*/
#about {
  padding: 80px 0;
  color: #ababab;
  background: url(images/bg.jpg) center/cover;
  animation: appear linear;
  animation-timeline: view();
  animation-range: entry 0% cover 40%;
}
.row {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}
.about-col-1 {
  /* flex-basis: 35%; */
  height: 550px;
  width: 500px;
}

.about-col-1 img {
  border-radius: 15px;
  height: 100%;
  width: 100%;
  margin-left: 10px;
}

.about-col-2 {
  flex-basis: 50%;
  margin: 0px 93px;
}
.subtitel {
  font-size: 60px;
  font-weight: 600;
  color: white;
}

.tab-titles {
  display: flex;
  margin: 20px 0 40px;
}
.tab-links {
  margin-right: 50px;
  font-size: 18px;
  cursor: pointer;
  font-weight: 500;
  position: relative;
}

.tab-links::after {
  content: "";
  width: 0;
  height: 3px;
  background: #ff004f;
  position: absolute;
  left: 0;
  bottom: -8px;
  transition: 0.5s;
}
.tab-links.active-link::after {
  width: 50%;
}
.tab-contents ul li {
  list-style: none;
  margin: 10px 0;
}
.tab-contents ul li span {
  color: #b54569;
  font-size: 14px;
}

.tab-contents {
  display: none;
}
.tab-contents.active-tab {
  display: block;
}

/* --------------Services--------------------- */

#services {
  padding: 30px 0;
  background: url(images/bg1.png) center/cover;
  animation: appear linear;
  animation-timeline: view();
  animation-range: entry 0% cover 40%;
}
.services-list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  grid-gap: 40px;
  margin-top: 50px;
}
.services-list div {
  color: white;
  padding: 40px;
  background: #262626;
  font-size: 13px;
  font-weight: 300;
  border-radius: 10px;
  transition: backgroung 0.5s, transform 0.5s;
}
.services-list div i {
  font-size: 50px;
  margin-bottom: 30px;
}
.services-list div h2 {
  font-size: 30px;
  font-weight: 500;
  margin-bottom: 15px;
}
.services-list div a {
  text-decoration: none;
  color: #ffff;
  font-size: 12px;
  margin-top: 20px;
  display: inline-block;
}
.services-list div:hover {
  background: #ff004f;
  transform: translateY(-10px);
  -webkit-box-shadow: 0px 0px 87px 1px rgba(255, 0, 81, 0.66);
  -moz-box-shadow: 0px 0px 87px 1px rgba(255, 0, 81, 0.66);
  box-shadow: 0px 0px 87px 1px rgba(255, 0, 81, 0.66);
}
/* ----------Portfolio---------*/
#portfolio {
  padding: 50px 0;
  background: url(images/bg3.png) center/cover;
  animation: appear linear;
  animation-timeline: view();
  animation-range: entry 0% cover 40%;
}
.work-list {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  grid-gap: 40px;
  margin-top: 50px;
}
.work {
  border-radius: 10px;
  position: relative;
  overflow: hidden;
}
.work img {
  width: 100%;
  border-radius: 10px;
  display: block;
  transition: transform 0.5s;
}

.layer h3 {
  color: white;
  font-weight: 500;
  margin-bottom: 20px;
}
.layer p {
  color: white;
}
.layer {
  width: 100%;
  height: 0;
  background: linear-gradient(rgba(0, 0, 0, 0.5), #ff004f);
  border-radius: 10px;
  position: absolute;
  left: 0;
  bottom: 0;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  text-align: center;
  font-size: 14px;
  transition: height 0.5s;
}
.layer a {
  margin-top: 20px;
  color: #ff004f;
  text-decoration: none;
  font-size: 18px;
  line-height: 60px;
  background: #ffff;
  width: 60px;
  height: 60px;
  border-radius: 50%;
  text-align: center;
}

.work:hover img {
  transform: scale(1.1);
}

.work:hover .layer {
  height: 100%;
}
.btn {
  display: block;
  margin: 50px auto;
  width: fit-content;
  border: 1px solid #ff004f;
  padding: 14px 50px;
  border-radius: 6px;
  color: white;
  text-decoration: none;
  transition: background 0.5s;
}

.btn:hover {
  background: #ff004f;
  -webkit-box-shadow: 0px 0px 87px 1px rgba(255, 0, 81, 0.66);
  -moz-box-shadow: 0px 0px 87px 1px rgba(255, 0, 81, 0.66);
  box-shadow: 0px 0px 87px 1px rgba(255, 0, 81, 0.66);
}

/* -------------Contact------------------- */

#contact p {
  color: white;
  animation: appear linear;
  animation-timeline: view();
  animation-range: entry 0% cover 40%;
}

.contact-left {
  flex-basis: 35%;
}
.contact-right {
  flex-basis: 60%;
}
.contact-left p {
  margin-left: 30px;
}
.contact-left p i {
  color: #ff004f;
  margin-right: 15px;
  font-size: 25px;
}
.social-icons {
  margin-top: 30px;
}
.social-icons a {
  text-decoration: none;
  font-size: 30px;
  margin-right: 15px;
  color: #ababab;
  display: inline-block;
  transition: transform 0.5s;
}

.social-icons a:hover {
  color: #ff004f;
  transform: translateY(-5px);
}
.btn.btn2 {
  display: inline-block;
  background: #ff004f;
}
.contact-right form {
  width: 100%;
}
form input,
form textarea {
  width: 100%;
  border: 0;
  outline: none;
  background: #262626;
  padding: 15px;
  margin: 15px 0;
  color: #fff;
  font-size: 18px;
  border-radius: 6px;
}
form .btn2 {
  padding: 14px 60px;
  font-size: 18px;
  margin-top: 20px;
  cursor: pointer;
}

.copyright {
  width: 100%;
  text-align: center;
  padding: 25px 0;
  background: #262626;
  font-weight: 300;
  margin-top: 20px;
}
.copyright i {
  color: #ff004f;
}

/* --------------css for small screen---------------- */

nav .fa-solid {
  display: none;
}
#menu-icons {
  color: white;
}

@media only screen and (max-width: 700px) {
  #header {
    background-image: url(images/phone-background.png);
  }
  body {
    cursor: none;
  }
  .header-text {
    margin-top: 100%;
    font-size: 16px;
  }
  .header-text h1 {
    font-size: 30px;
  }
  nav .fa-solid {
    display: block;
    font-size: 25px;
    cursor: pointer;
  }
  nav ul {
    background: #ff004f;
    position: fixed;
    top: 0;
    right: 0;
    width: 200px;
    height: 100vh;
    padding-top: 50px;
    z-index: 2;
    transition: right 0.5s;
  }
  nav ul li {
    display: block;
    margin: 25px;
  }
  nav ul .fa-solid {
    position: absolute;
    top: 25px;
    left: 25px;
    cursor: pointer;
  }
  .subtitel {
    font-size: 40px;
  }
  .about-col-1,
  .about-col-2 {
    flex-basis: 100%;
  }
  .about-col-1 {
    margin-bottom: 30px;
    /* display:flex;
    justify-content: center; */
  }
  .about-col-1 img {
    /* border: 3px solid red; */
    /* width: auto; */
    object-fit: cover;
    height: 500px;
    /* display:flex;
    justify-content: center; */
  }
  .about-col-2 {
    font-size: 14px;
  }
  .tab-links {
    font-size: 16px;
    margin-right: 20px;
  }
  .contact-left,
  .contact-right {
    flex-basis: 100%;
  }
  .copyright {
    font-size: 14px;
  }
  .body .subtitel {
    margin-left: 70px;
  }
}

#msg {
  color: #61b752;
  margin-top: -40px;
  display: block;
}

/* --------------mouse-------------- */
body {
  cursor: none;
}
/* .cursor-dot {
  width: 5px;
  height: 5px;
  background-color: rgb(255, 255, 255);
} */
.cousor-outline {
  width: 20px;
  height: 20px;
  background-color: #3f3d3d;
  /* border: 3px solid #ff004f; */
}
.cursor-dot,
.cousor-outline {
  position: fixed;
  top: 0;
  left: 0;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  z-index: 1;
  pointer-events: none;
}

/* ----------scroll effect------------ */

@keyframes appear {
  from {
    opacity: 0;
    transform: translateX(-100px);
  }
  to {
    opacity: 1;
    transform: translateX(0px);
  }
}


#page2{
  height: 100%;
  width: 100%;
  background-color:#c3c3c3;
  /* padding: 5vw 0; */
  /* display: flex;
  align-items: center; */
  text-align: center;
  /* justify-content: center; */
  /* max-width: 100%;  */
}
#page2 h1{
  font-size: 40vw;
  font-family: Poppins;
  text-transform: uppercase;
  font-weight: 600;
}

